--- a/ui.html
+++ b/ui.html
@@ -51,7 +51,7 @@
 
 <script>
     document.getElementById("submit-tweets").onclick = () => {
-        const tweetText = document.getElementById('tweet-input').value;
+        const tweetText = document.getElementById('tweet-input').textContent;
         parent.postMessage({pluginMessage: {tweetText}}, '*');
     }
 </script>
